# dradio

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  bootstrap.sh  config.h.in  configure  configure.ac  dradio_3.8.orig.tar.gz.delta  dradio_3.8.orig.tar.gz.id
debian/: changelog  control  copyright  watch
debian/patches/: fix-include-curl-library.diff  series
doc/: Makefile.am  Makefile.in  dradio-config.1  dradio.1  dradio.5
src/: Makefile.am  Makefile.in  configuration.c  dradio-config  dradio.c  dradio.h  gui.c  help.c  lists.c  lists.h  logo.c  mplayer.c  podcast.c  signals.c
